Refatora acesso ao banco de dados

--- a/Estudos/appsettings.Development.json
+++ b/Estudos/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStringDatabase": {
+    "MySql": "server=172.17.0.2;user=root;database=estudos;port=3306;password=admin"
   }
 }
