Adiciona helper para injecao de dependencia

--- a/Estudos/appsettings.Development.json
+++ b/Estudos/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
 
-  "ConnectionStringDatabase": {
-    "MySql": "server=172.17.0.2;user=root;database=estudos;port=3306;password=admin"
+  "Database": {
+    "Name": "MySql",
+    "ConnectionString": "server=172.17.0.2;user=root;database=estudos;port=3306;password=admin"
   }
 }
