Altera connection string

--- a/Estudos/appsettings.Development.json
+++ b/Estudos/appsettings.Development.json
@@ -9,6 +9,6 @@
 
   "Database": {
     "Name": "MySql",
-    "ConnectionString": "server=172.17.0.2;user=root;database=estudos;port=3306;password=admin"
+    "ConnectionString": "server=localhost;user=admin;database=estudos;port=3307;password=admin"
   }
 }
